<resources>
    <string name="app_name">Zaker</string>

    <string name="update_title">有更新可用</string>
    <string name="update_description">新版%1$s版本可用\n更新内容\n%2$s</string>
    <string name="update_button">现在升级</string>

    <string name="common_cancel">取消</string>

    <string name="menu_subscribe">订阅</string>
    <string name="menu_hotspot">热点</string>
    <string name="menu_local">本地</string>
    <string name="menu_fun">玩乐</string>
    <string name="menu_community">社区</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
